ft_containers-unit-test/logs.txt
In file included from ../map_tests/equal_range().cpp:2:
In file included from ../map_tests/__service.ipp:3:
In file included from ../map_tests/../../../map.hpp:2:
In file included from ../map_tests/../../../RBT_MAP.hpp:6:
../map_tests/../../../pair.hpp:16:41: error: no matching constructor for initialization of 'ft::pair<ft::map_iterator<const ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > >, ft::map_iterator<const ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > > >::first_type' (aka 'ft::map_iterator<const ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > >')
            pair (const pair<U,V>& pr): first(pr.first), second(pr.second){}
                                        ^     ~~~~~~~~
../map_tests/equal_range().cpp:43:90: note: in instantiation of function template specialization 'ft::pair<ft::map_iterator<const ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > >, ft::map_iterator<const ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > > >::pair<ft::map_iterator<ft::pair<const int, int>, ft::Node<ft::pair<const int, int> > >, ft::map_iterator<ft::pair<const int, int>, ft::Node<ft::pair<const int, int> > > >' requested here
    const _pair<_map<int, int>::const_iterator , _map<int, int>::const_iterator>& pair = mp.equal_range(10);
                                                                                         ^
../map_tests/equal_range().cpp:64:73: note: in instantiation of function template specialization 'equal_range_test<int, int>' requested here
    exit(run_map_unit_test<int, int>("equal_range()", equal_range_test, equal_range_test));
                                                                        ^
../map_tests/../../../map_iterator.hpp:30:13: note: candidate constructor not viable: no known conversion from 'const ft::pair<ft::map_iterator<ft::pair<const int, int>, ft::Node<ft::pair<const int, int> > >, ft::map_iterator<ft::pair<const int, int>, ft::Node<ft::pair<const int, int> > > >::first_type' (aka 'const ft::map_iterator<ft::pair<const int, int>, ft::Node<ft::pair<const int, int> > >') to 'ft::map_iterator<const ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > >::node_ptr' (aka 'const ft::Node<ft::pair<const int, int> > *') for 1st argument
            map_iterator(node_ptr ptr = NULL, node_ptr root = NULL): _ptr(ptr),_root(root) {
            ^
../map_tests/../../../map_iterator.hpp:36:13: note: candidate constructor not viable: no known conversion from 'const map_iterator<pair<...>, Node<...>>' to 'const map_iterator<const pair<...>, const Node<...>>' for 1st argument
            map_iterator(map_iterator const& it) : _ptr(it._ptr), _root(it._root), _NIL(it._NIL) {}
            ^
In file included from ../map_tests/equal_range().cpp:2:
In file included from ../map_tests/__service.ipp:3:
In file included from ../map_tests/../../../map.hpp:2:
In file included from ../map_tests/../../../RBT_MAP.hpp:6:
../map_tests/../../../pair.hpp:16:58: error: no matching constructor for initialization of 'ft::pair<ft::map_iterator<const ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > >, ft::map_iterator<const ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > > >::second_type' (aka 'ft::map_iterator<const ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > >')
            pair (const pair<U,V>& pr): first(pr.first), second(pr.second){}
                                                         ^      ~~~~~~~~~
../map_tests/../../../map_iterator.hpp:30:13: note: candidate constructor not viable: no known conversion from 'const ft::pair<ft::map_iterator<ft::pair<const int, int>, ft::Node<ft::pair<const int, int> > >, ft::map_iterator<ft::pair<const int, int>, ft::Node<ft::pair<const int, int> > > >::second_type' (aka 'const ft::map_iterator<ft::pair<const int, int>, ft::Node<ft::pair<const int, int> > >') to 'ft::map_iterator<const ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > >::node_ptr' (aka 'const ft::Node<ft::pair<const int, int> > *') for 1st argument
            map_iterator(node_ptr ptr = NULL, node_ptr root = NULL): _ptr(ptr),_root(root) {
            ^
../map_tests/../../../map_iterator.hpp:36:13: note: candidate constructor not viable: no known conversion from 'const map_iterator<pair<...>, Node<...>>' to 'const map_iterator<const pair<...>, const Node<...>>' for 1st argument
            map_iterator(map_iterator const& it) : _ptr(it._ptr), _root(it._root), _NIL(it._NIL) {}
            ^
2 errors generated.
